// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/compontent/posters/as-figure.vue renders: A new poster 1`] = `
<figure
  class="poster"
>
  <icon-stub
    name="working"
  />
   
  <as-svg-stub
    itemid="/+16282281824/posters/559666932867"
    poster="[object Object]"
  />
   
  <figcaption>
    <menu>
      <as-link-stub
        itemid="/+16282281824/posters/559666932867"
      >
        <time>
          8:02 AM
        </time>
      </as-link-stub>
       
      <as-download-stub
        itemid="/+16282281824/posters/559666932867"
      />
       
      <!---->
    </menu>
  </figcaption>
</figure>
`;

exports[`@/compontent/posters/as-figure.vue renders: A poster 1`] = `
<figure
  class="poster"
>
  <icon-stub
    name="working"
  />
   
  <as-svg-stub
    itemid="/+16282281824/posters/559666932867"
  />
   
  <figcaption>
    <!---->
  </figcaption>
</figure>
`;
